--- a/challenges.css
+++ b/challenges.css
@@ -65,14 +65,14 @@
 }
 
 .buttonColorChange:hover {
-	background-color: #FFC107;
+	background-color: #ffcc00;
 	border-color: #564F6F;
 }
 
 .buttonColorChange:active,
 .buttonColorChange.btn:target,
 .buttonColorChange.btn:active:focus {
-	background-color: #FFC107;
+	background-color: #ffcc00;
 	transform: translateY(4px);
 }
 
@@ -141,12 +141,12 @@
 
 .completed-challenges {
 	background-color: white;
+	font-size: 16px;
 	width: 400px;
-	margin-left: 875px;
-	height: 560px;
 	border-radius: 5px;
 	padding: 10px;
-	margin-top: 80px;
+	margin-top: 20px;
+	list-style-type: none
 }
 
 
